# csc-administration

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_REVIEW.md  COMPETITOR_ANALYSIS.md  COMPETITOR_DEEP_ANALYSIS.md  DOCUMENT_INDEX.md  Dockerfile  FEATURE_CHECKLIST.md  FEATURE_RATING.md  FEATURE_VALIDATION_COMPLETE.md  IMPLEMENTATION_TASK.md  MESSAGING_FEATURE.md  README.md  REQUIREMENTS.md  REQUIREMENTS_CHECKED.md  REQUIREMENTS_FINAL.md  database_schema.sql  docker-compose.yml  import_members.py  package.json  pyproject.toml  tailwind.config.js
cdata/: README.md  member_template.json  order_template.json  strains.json
data/: README.md  activity.json  catalog.json  governance.json  messaging.json  social_clubs.json  users.json
design/: 10_PHASEN_ROADMAP.md  9_PHASEN_ROADMAP.md  GUI_ASCII_MOCKUPS.md  TEST_STRATEGY.md  USER_STORIES.md
docs/: audit-report-2026-05-11.md
exports/: datev_month_20260301_20260331.csv
requirements/: 01-vision-konzept.md  03-deutsches-csc-recht.md  05-user-stories.md  11-tech-stack.md  16-mitgliedschafts-workflow.md  17-admin-dashboard.md  18-zahlungs-system.md  19-warenwirtschaft.md  20-pdf-dokumente.md  21-authentifizierung.md  22-arbeitsstunden-zahlungen.md  23-shop-guthaben.md  24-ui-design-system.md  25-sms-abholort.md  96-gesetzliche-pflicht-features.md  97-feature-analyse-konkurrenz.md  98-software-marktuebersicht.md  WHOLE_REQUIREMENTS.md
scripts/: ai_worker_runtime.py  auto-git-sync.sh  capture_all_routes_playwright.py  mailpit_api.py  migrate_sqlite_to_postgres.sh  retry_cycles.py  retry_mobile_screenshots.py  (+3 more)
(+482 files in other folders)
