[project]
name = "csc-administration"
version = "0.1.0"
description = "Django Verwaltungssystem fuer Cannabis Social Club"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Django>=5.1,<5.2",
  "markdown>=3.10.2",
  "psycopg[binary]>=3.2,<3.3",
  "whitenoise>=6.6,<7",
]

[dependency-groups]
dev = [
  "pytest>=8.3,<9",
  "pytest-django>=4.11,<5",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
